@@ -1,0 +1,19 @@
+// file      : CCF/IDL2/SyntaxTree/InterfaceCtor.cpp
+// author    : Boris Kolpackov <boris@dre.vanderbilt.edu>
+// cvs-id    : $Id$
+
+namespace CCF
+{
+  namespace IDL2
+  {
+    namespace SyntaxTree
+    {
+      struct InterfaceDef
+      {
+        InterfaceDef ();
+      };
+      
+      InterfaceDef::InterfaceDef () {}
+    }
+  }
+}
